Fix spacings in sections

--- a/static/js/page/api/api.scss
+++ b/static/js/page/api/api.scss
@@ -281,3 +281,10 @@ $platforms: (
 
 
 }
+
+.summary-group {
+  margin-bottom: 20px;
+  > p:last-of-type {
+    margin-bottom: 10px;
+  }
+}
